Estuve con responsive en html personajes

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -9,7 +9,6 @@
 </head>
 
 <body>
-
     <!-- barra navegacion -->
     <header>
         <nav>
@@ -22,7 +21,7 @@
             </ul>
         </nav>
     </header>
-    <main class="personajes">
+    <main class="personajes personajes-grid">
         <!-- Personajes -->
         <section class="Kratos">
             <div class="textoPersonajesD">
