--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg data-bs-theme=dark">
             
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img src="./assets/img/logo.png" alt=""></a>
+                <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,19 +24,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="barra-navegacion">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">INICIO</a>
+                            <a class="nav-link active" aria-current="page" href="../index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/personajes.html">PERSONAJES</a>
+                            <a class="nav-link" href="./personajes.html">PERSONAJES</a>
                         </li>
                         <li class="nav-item">
-                            <a  class="nav-link" href="./pages/historia.html">HISTORIA</a>
+                            <a  class="nav-link" href="./historia.html">HISTORIA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/consejos.html">CONSEJOS</a>
+                            <a class="nav-link" href="./consejos.html">CONSEJOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/descargas.html">MOMENTOS</a>
+                            <a class="nav-link" href="./descargas.html">MOMENTOS</a>
                         </li>
                     </ul>
                 </div>
