--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="God of war, Ragnarok, ps4, ps5, dioses griegos"/>
     <meta name="robots" content="index"/>
 
-    <meta name="author" content="KmiliuxDev" />
+    <meta name="author" content="Kmiliux.Dev" />
 
     <meta name="copyright" content="Camilo" />
     <!-- titulo -->
@@ -52,10 +52,13 @@
                 </div>
             </div>
         </nav>
-        <img class="fondoInicio" src="./assets/img/fondoInicio.png" alt="fondoInicio">
-        <div class="textoInicio">
-            <h1>Listos para esta aventura de dioses</h1>
-            <img class="flechaInicio" src="./assets/img/doubleDown.png" alt="flechaInicio">
+
+        <div class="inicioFondo">
+            <img class="fondoInicio" src="./assets/img/fondoInicio.png" alt="fondoInicio">
+            <div class="textoInicio">
+                <h1>Listos para esta aventura de dioses</h1>
+                <img class="flechaInicio" src="./assets/img/doubleDown.png" alt="flechaInicio">
+            </div>
         </div>
 
 
@@ -74,7 +77,7 @@
                 preparan para una batalla profetizada que causará el fin del mundo. En este viaje, Explorarán
                 impresionantes
                 paisajes míticos y se enfrentarán a terroríficos enemigos: dioses nórdicos y Monstruos. La amenaza del
-                Ragnarök se cierne. Kratos y Atreus tendrán que elegir entre la seguridad de sí mismos y de los reinos.V
+                Ragnarök se cierne. Kratos y Atreus tendrán que elegir entre la seguridad de sí mismos y de los reinos.
             </p>
 
         </div>
@@ -83,11 +86,15 @@
     <section class="trailer">
 
         <div class="logoTrailer">
+            <p class="letras">ᛈᚱᚩᚠᛖ ᚠᚢᛖ ᛒᚢᛖᚾᚪ ᛁᛞ</p>
+
             <img src="./assets/img/trailer.png" alt="trailerLogo">
+
+            <p class="letras">ᛖᚪ ᚪᛈᚱᚩvᚪᛗᛖ ᚳᚩᚾ ᛞᛁᛖ</p>
         </div>
         <div class="videos">
             <!-- video 1 -->
-            <div>
+            <div class="video-trailer">
                 <iframe class="videoIzquierda" width="560" height="315"
                     src="https://www.youtube.com/embed/vtFhDrMIZjE?si=bPM53DAj9sy4Hu_P" title="YouTube video player"
                     frameborder="0"
@@ -95,7 +102,7 @@
                     allowfullscreen></iframe>
             </div>
 
-            <div>
+            <div class="video-trailer">
                 <!-- video 2 -->
                 <iframe class="videoDerecha" width="560" height="315"
                     src="https://www.youtube.com/embed/sMDgMqP_4C8?si=hnBj2YDUsJyXQMBk" title="YouTube video player"
