--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="body">
 
     <header>
-        <nav class="navbar navbar-expand-lg data-bs-theme=dark">
+        <nav class="navbar navbar-expand-lg data-bs-theme=dark fixed-top">
             
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img src="./assets/img/logo.png" alt=""></a>
@@ -85,13 +85,20 @@
     </section>
     <section class="trailer">
 
-        <div class="logoTrailer">
-            <p class="letras">ᛈᚱᚩᚠᛖ ᚠᚢᛖ ᛒᚢᛖᚾᚪ ᛁᛞ</p>
 
-            <img src="./assets/img/trailer.png" alt="trailerLogo">
-
-            <p class="letras">ᛖᚪ ᚪᛈᚱᚩvᚪᛗᛖ ᚳᚩᚾ ᛞᛁᛖ</p>
+        <div class="texto">
+            <div class="texto-cambiante">
+                <span class="texto-original">ᛈᚱᚩᚠᛖ ᛖᛋ ᛗᚢᚣ ᛒᚢᛖᚾᚪ ᛁᛞᛖᚪ</span>
+                <span class="texto-hover">profe es muy buena idea</span>
+            </div>
+            <img class="trailerLogo" src="./assets/img/trailer.png" alt="trailerLogo">
+            <div class="texto-cambiante">
+                <span class="texto-original">ᛈᚱᚩᚠᛖ ᛖᛋ ᛗᚢᚣ ᛒᚢᛖᚾᚪ ᛁᛞᛖᚪ</span>
+                <span class="texto-hover">profe es muy buena idea</span>
+            </div>
         </div>
+
+
         <div class="videos">
             <!-- video 1 -->
             <div class="video-trailer">
@@ -118,9 +125,18 @@
 
 
 
+
+
+
     <footer>
         <p class="piePagina">- SCE Santa Monica Studio © - Todos los derechos reservados -</p>
     </footer>
+
+
+    <audio id="musica-fondo" loop autoplay>
+        <source src="url()" type="audio/mpeg">
+        Tu navegador no soporta la reproducción de audio.
+    </audio>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
