--- a/pages/descargas.html
+++ b/pages/descargas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="disfruta de estos videos de los distintos momentos del historia...">
-    <meta name="keywords" content="God of war, Ragnarok, ps4, ps5, aventura"/>
+    <meta name="keywords" content="God of war, Ragnarok, ps4, ps5, aventura" />
 
     <meta name="author" content="KmiliuxDev" />
 
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     <!-- barra navegacion -->
     <header>
         <nav class="navbar navbar-expand-lg data-bs-theme=dark">
-            
+
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="./personajes.html">PERSONAJES</a>
                         </li>
                         <li class="nav-item">
-                            <a  class="nav-link" href="./historia.html">HISTORIA</a>
+                            <a class="nav-link" href="./historia.html">HISTORIA</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./consejos.html">CONSEJOS</a>
@@ -53,38 +53,45 @@
         </nav>
     </header>
 
-    <section class="videosMomentos">
-        <div class="videoCentrado">
-            <h3 class="titulo">Encuentro con Thor</h3>
-            <iframe class="video" width="681" height="383" src="https://www.youtube.com/embed/VxaOciV2u_w?si=xwwYxXHZbOWiY0-v"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-        </div>
-        <div class="videoCentrado">
-            <h3 class="titulo">Revelaciones sobre el pasado de Kratos</h3>
-            <iframe class="video" width="681" height="383" src="https://www.youtube.com/embed/KYTAgzAuYwU"
-                title="*KRATOS ENCARA AL KRATOS DEL PASADO* FINAL GOD OF WAR RAGNAROK VALHALLA PS5 (ESPAÑOL LATINO)"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-        </div>
-        <div class="videoCentrado">
-            <h3 class="titulo">La batalla final contra el Ragnarok</h3>
-            <iframe class="video" width="681" height="383" src="https://www.youtube.com/embed/xxZeK21rpWw"
-                title="God of War Ragnarok | Kratos da inicio a la guerra contra Asgard | 4K 60FPS | Español latino | PS5"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen></iframe>
-        </div>
-    </section>
+    <main>
+
+
+
+        <section class="videosMomentos">
+            <div class="videoCentrado">
+                <h3 class="titulo">Encuentro con Thor</h3>
+                <iframe class="video" width="681" height="383"
+                    src="https://www.youtube.com/embed/VxaOciV2u_w?si=xwwYxXHZbOWiY0-v" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="videoCentrado">
+                <h3 class="titulo">Revelaciones sobre el pasado de Kratos</h3>
+                <iframe class="video" width="681" height="383" src="https://www.youtube.com/embed/KYTAgzAuYwU"
+                    title="*KRATOS ENCARA AL KRATOS DEL PASADO* FINAL GOD OF WAR RAGNAROK VALHALLA PS5 (ESPAÑOL LATINO)"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+            <div class="videoCentrado">
+                <h3 class="titulo">La batalla final contra el Ragnarok</h3>
+                <iframe class="video" width="681" height="383" src="https://www.youtube.com/embed/xxZeK21rpWw"
+                    title="God of War Ragnarok | Kratos da inicio a la guerra contra Asgard | 4K 60FPS | Español latino | PS5"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
+            </div>
+
+        </section>
+    </main>
 
     <footer>
         <p class="piePagina">- SCE Santa Monica Studio © - Todos los derechos reservados -</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
